--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-    "python.pythonPath": "aprender.py\\Scripts\\python.exe",
-    "code-runner.executorMap": {
-        "python": "aprender.py\\Scripts\\python.exe",
-        
-    },
-    "python.testing.promptToConfigure": false,
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": false,
-    "python.testing.nosetestsEnabled": false
+    "python.pythonPath": "C:\\Users\\carlos\\AppData\\Roaming\\Microsoft\\Windows\\Start Menu\\Programs\\Python 3.10",
 }
